# thelounge-telegram-accounts

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  control.env.example  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  telegram.env.example
docker/: Dockerfile-control  Dockerfile-telegram-bot  compose-control.yaml  compose-telegram-bot.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 434c9eea09b1_accounts.py
src/control/: filebrowser_shemas.py  functions.py  main.py  models.py  thelounge_schemas.py
src/shared/: schemas.py
src/telegram_bot/: main.py
src/thelounge_telegram_accounts/: main.py
stubs/telethon/: __init__.pyi  types.pyi
stubs/telethon/events/: __init__.pyi
