[project]
name = "thelounge-telegram-accounts"
version = "0.2.1"
description = "Self-hosted tool built for a local community setup"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Theo Saveliev", email = "89431871+theosaveliev@users.noreply.github.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
]

keywords = ["telegram", "thelounge", "accounts"]

requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.135.3,<0.136.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=2.12.5,<3.0.0",
    "uvicorn>=0.44.0,<0.45.0",
    "uvloop>=0.22.1,<0.23.0",
]

[project.optional-dependencies]
control = [
    "aiosqlite>=0.22.1,<0.23.0",
    "alembic>=1.18.4,<2.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "sqlalchemy[asyncio]>=2.0.49,<3.0.0",
]

telegram-bot = [
    "cryptg>=0.5.2,<0.6.0",
    "telethon>=1.43.0,<2.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.4,<2.0.0",
    "mypy>=1.19.1,<2.0.0",
    "poethepoet>=0.42.1",
    "ruff>=0.15.8",
    "types-docker>=7.1.0.20260328,<8.0.0.0",
]

[project.scripts]
telegram-bot = "telegram_bot.main:run"
control = "control.main:run"
control-dev = "control.main:dev"

[project.urls]
github = "https://github.com/theosaveliev/thelounge-telegram-accounts"
issues = "https://github.com/theosaveliev/thelounge-telegram-accounts/issues"

[tool.uv]
add-bounds = "major"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".env",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    ".DS_Store",
    ".idea",
    ".vscode",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/telegram_bot", "src/control"]

[tool.poe.executor]
type = "uv"

[tool.poe.tasks]
format = "ruff format"
lint = "ruff check --fix ."
mypy = "mypy ."
pyright = "basedpyright ."
dev = ["format", "lint", "mypy", "pyright"]
docker-telegram-bot = ["docker-telegram-bot-build", "docker-telegram-bot-push"]
docker-control = ["docker-control-build", "docker-control-push"]

[tool.poe.tasks.docker-telegram-bot-build]
shell = """
    IMAGE_TAG=nett/tta-telegram-bot:$(uv version --short)
    PLATFORM=linux/amd64,linux/arm64/v8
    docker build --tag ${IMAGE_TAG} --platform ${PLATFORM} --file docker/Dockerfile-telegram-bot --no-cache .
"""

[tool.poe.tasks.docker-telegram-bot-push]
shell = """
    IMAGE_TAG=nett/tta-telegram-bot:$(uv version --short)
    docker image push ${IMAGE_TAG}
"""

[tool.poe.tasks.docker-control-build]
shell = """
    IMAGE_TAG=nett/tta-control:$(uv version --short)
    PLATFORM=linux/amd64,linux/arm64/v8
    docker build --tag ${IMAGE_TAG} --platform ${PLATFORM} --file docker/Dockerfile-control --no-cache .
"""

[tool.poe.tasks.docker-control-push]
shell = """
    IMAGE_TAG=nett/tta-control:$(uv version --short)
    docker image push ${IMAGE_TAG}
"""
